Added spotify and crop options via styling only(for now).

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="ring-wrapper">
         <div class="center-dot"></div>
         
-        <div class="ring-sector" style="--i:0;" onclick="sendAction('copy')">
-            <i class="bi bi-content-copy icon"></i>
+        <div class="ring-sector" style="--i:0;" onclick="sendAction('spotify')">
+            <i class="bi bi-spotify icon"></i>
         </div>
         <div class="ring-sector" style="--i:1;" onclick="sendAction('paste')">
             <i class="bi bi-clipboard icon"></i>
@@ -23,8 +23,8 @@
         <div class="ring-sector" style="--i:3;" onclick="sendAction('volume-up')">
             <i class="bi bi-volume-up icon"></i>
         </div>
-        <div class="ring-sector" style="--i:4;" onclick="sendAction('brightness-high')">
-            <i class="bi bi-brightness-high icon"></i>
+        <div class="ring-sector" style="--i:4;" onclick="sendAction('screenshot')">
+            <i class="bi bi-crop icon"></i>
         </div>
         <div class="ring-sector" style="--i:5;" onclick="sendAction('gear')">
             <i class="bi bi-gear icon"></i>
