Added copy functionality and styling.

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <div class="ring-sector" style="--i:0;" onclick="sendAction('spotify')">
             <i class="bi bi-spotify icon"></i>
         </div>
+        <div class="ring-sector" style="--i:2;" onclick="sendAction('copy')">
+            <i class="bi bi-copy icon"></i>
+        </div>
         <div class="ring-sector" style="--i:1;" onclick="sendAction('paste')">
             <i class="bi bi-clipboard icon"></i>
-        </div>
-        <div class="ring-sector" style="--i:2;" onclick="sendAction('search')">
-            <i class="bi bi-search icon"></i>
         </div>
         <div class="ring-sector" style="--i:3;" onclick="sendAction('volume-up')">
             <i class="bi bi-volume-up icon"></i>
