Changed logo and action name from volume to last window.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="ring-sector" style="--i:1;" onclick="sendAction('paste')">
             <i class="bi bi-clipboard icon"></i>
         </div>
-        <div class="ring-sector" style="--i:3;" onclick="sendAction('volume-up')">
-            <i class="bi bi-volume-up icon"></i>
+        <div class="ring-sector" style="--i:3;" onclick="sendAction('last-window')">
+            <i class="bi bi-window-stack icon"></i>
         </div>
         <div class="ring-sector" style="--i:4;" onclick="sendAction('screenshot')">
             <i class="bi bi-crop icon"></i>
